# resolv.ai

./: README.md
backend/: config.py  database.py  main.py  pyproject.toml  requirements.txt  resolv.db  seed.py
backend/modules/ai/: router.py  schemas.py  service.py
backend/modules/alerts/: schemas.py  service.py
backend/modules/core/: models.py  router.py  schemas.py  service.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: api.js  home.css  home.js  main.js  scene.js  style.css
